Found a workaround for the footer a tags
using browser detect you can manipulate the css based on which browser is being used.

--- a/public/index.html
+++ b/public/index.html
@@ -25,3 +25,9 @@
     
   </body>
 </html>
+
+<!-- /* Created with https://www.css-gradient.com */
+background: #FFFFFF;
+background: -webkit-linear-gradient(bottom, #FFFFFF, #8C8C8C);
+background: -moz-linear-gradient(bottom, #FFFFFF, #8C8C8C);
+background: linear-gradient(to top, #FFFFFF, #8C8C8C); -->
