Changed favicon & name

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-config" content="/browserconfig.xml" />
-    <meta name="msapplication-TileColor" content="DCAE0A">
-    <meta name="theme-color" content="DCAE0A">
+    <meta name="msapplication-TileColor" content="gldpurp
+    ">
+    <meta name="theme-color" content="gldpurp
+    ">
     <title>Lucian Brooks</title>
   </head>
   <body>
