Project Image Loading
But carousel not working yet. Might need to install Webpack.

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-config" content="/browserconfig.xml" />
-    <meta name="msapplication-TileColor" content="gldpurp
-    ">
-    <meta name="theme-color" content="gldpurp
-    ">
+    <meta name="msapplication-TileColor" content="gldpurp">
+    <meta name="theme-color" content="gldpurp">
+    <!-- <link rel="stylesheet" href="<NODE_MODULES_FOLDER>/react-responsive-carousel/lib/styles/carousel.min.css"/> -->
     <title>Lucian Brooks</title>
   </head>
   <body>
