Carousel Working Properly
Was missing one l (letter) in the css import call.

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
     <meta name="msapplication-config" content="/browserconfig.xml" />
     <meta name="msapplication-TileColor" content="gldpurp">
     <meta name="theme-color" content="gldpurp">
-    <!-- <link rel="stylesheet" href="<NODE_MODULES_FOLDER>/react-responsive-carousel/lib/styles/carousel.min.css"/> -->
+    <link rel="stylesheet" href="NODE_MODULES_FOLDER/react-responsive-carousel/lib/styles/carousel.min.css"/>
+    <link rel="stylesheet" href="carousel.css"/>
     <title>Lucian Brooks</title>
   </head>
   <body>
