--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="gldpurp">
     <link rel="stylesheet" href="NODE_MODULES_FOLDER/react-responsive-carousel/lib/styles/carousel.min.css"/>
     <link rel="stylesheet" href="carousel.css"/>
-    <title>Lucian Brooks</title>
+    <title>Lucian Soto</title>
   </head>
   <body>
     <div id="root"></div>
